--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 sudo: required
+language: generic
 services:
   - docker
 
 before_install:
   - docker build -t sudswastik/react-app -f Dockerfile.dev .
+
+script:
+  - docker run -e CI=true sudswastik/react-app npm run test
